Fix z-index for box list

--- a/src/components/CustomComponent/BoxMenuItem.module.css
+++ b/src/components/CustomComponent/BoxMenuItem.module.css
@@ -208,7 +208,7 @@
     width: 100%;
     max-height: 100px;
     overflow: visible;
-    /* z-index: 3333; */
+    z-index: 9999999;
 }
 
 .space{
